--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -25,7 +25,8 @@ body:
     id: expected_behavior
     attributes:
       label: "Expected Behavior"
-      description: A clear and concise description of what you expect to happen.      placeholder: "Describe the expected behavior in a few lines"
+      description: A clear and concise description of what you expect to happen.      
+      placeholder: "Describe the expected behavior in a few lines"
     validations:
       required: true
   - type: textarea
