--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,8 +1,11 @@
-name: "🐞  Bug Report"
+name: "🐞 Bug Report"
 description: Create a report to help us improve
 title: "🐞 [BUG] - <title>"
 labels: [
   "bug"
+]
+assignees: [
+
 ]
 body:
   - type: textarea
