--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,10 +2,7 @@ name: "🐞 Bug Report"
 description: "Create a report to help us improve"
 title: "🐞 [BUG] - <title>"
 labels: [
-  "bug"
-]
-assignees: [
-
+  "question"
 ]
 body:
   - type: textarea
