--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,5 +2,5 @@ name: "🐞 Bug Report"
 description: "Create a report to help us improve"
 title: "🐞 [BUG] - <title>"
 labels: [
-  "question"
+  "bug"
 ]
