--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -18,7 +18,7 @@ body:
     attributes:
       label: "To Reproduce"
       description: Steps to reproduce the behavior.
-      placeholder: | 
+      value: | 
       1. Go to '...'
       2. Click on '....'
       3. Scroll down to '....'
