--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -18,10 +18,10 @@ body:
     attributes:
       label: "To Reproduce"
       description: "How do you trigger this bug? Please walk us through it step by step."
-      value: "|
+      value: |
       1.
       2.
       3.
-      ..."
+      ...
     validations:
       required: true
