--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -17,7 +17,7 @@ body:
     id: reproduce_info
     attributes:
       label: "To Reproduce"
-      description: "How do you trigger this bug? Please walk us through it step by step."
+      description: How do you trigger this bug? Please walk us through it step by step.
       value: |
         1.
         2.
