--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -34,3 +34,27 @@ body:
       placeholder: "Describe the expected behavior in a few lines"
     validations:
       required: true
+  - type: textarea
+    id: screenshots
+    attributes:
+      label: "Screenshots"
+      description: If applicable, add screenshots to help explain your problem.
+      placeholder: "#Add a few screenshots here, illustrating the problem"
+    validations:
+      required: false
+  - type: textarea
+    id: desktop
+    attributes:
+      label: "Desktop"
+      description: Please complete the following information
+    placeholder: "- OS: [e.g. iOS]\n- Browser [e.g. chrome, safari]\n - Version [e.g. 22]"
+    validations:
+      required: true
+- type: textarea
+    id: additional_context
+    attributes:
+      label: "Additional Context"
+      description: Add any other context about the problem here.
+      placeholder: "A few lines describing additional context, such as related #Issue ID or #Pull Request ID"
+    validations:
+      required: false
