--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -53,3 +53,11 @@ body:
         - Version [e.g. 22]
     validations:
       required: true
+  - type: textarea
+    id: additional_context
+    attributes:
+      label: "Additional Context"
+      description: Add any other context about the problem here.
+      placeholder: "A few lines describing additional context, such as related #Issue ID or #Pull Request ID"
+    validations:
+      required: false
