--- a/.github/ISSUE_TEMPLATE/task_list.yml
+++ b/.github/ISSUE_TEMPLATE/task_list.yml
@@ -25,12 +25,12 @@ body:
     id: basic_example
     attributes:
       label: "To Do"
-      description: Add your tasks here, by replacing the placeholders ("Task 1", "Task 2") with the actual tasks that you need to complete. To mark a task as complete, simply click the checkboxes when the issue is created. 
+      description: Add your tasks here, by writing "- [ ]" as shown below, and then replacing the placeholders ("Task 1", "Task 2") with the actual tasks that you need to complete. To mark a task as complete, simply click the checkboxes when the issue is created. 
       placeholder: |
-        - [] Task 1
-        - [] Task 2
-        - [] Task 3
-        - [] ...
+        - [ ] Task 1
+        - [ ] Task 2
+        - [ ] Task 3
+        - [ ] ...
     validations:
       required: true
   - type: textarea
