--- a/.github/ISSUE_TEMPLATE/task_list.yml
+++ b/.github/ISSUE_TEMPLATE/task_list.yml
@@ -25,7 +25,7 @@ body:
     id: basic_example
     attributes:
       label: "To Do"
-      description: Add your tasks here, by writing "- [ ]" as shown below, and then replacing the placeholders ("Task 1", "Task 2") with the actual tasks that you need to complete. To mark a task as complete, simply click the checkboxes when the issue is created. 
+      description: Add your tasks here, by writing "- [ ]" as shown below, and then replacing the placeholders ("Task 1", "Task 2") with the actual tasks that you need to complete. To mark a task as complete, simply click the checkbox that appear when the issue is created. 
       placeholder: |
         - [ ] Task 1
         - [ ] Task 2
