--- a/.github/ISSUE_TEMPLATE/task_list.yml
+++ b/.github/ISSUE_TEMPLATE/task_list.yml
@@ -10,7 +10,7 @@ body:
     attributes:
       label: "Start Date"
       description: When did/will you start working on this task list?
-      placeholder: "month/day/year"
+      placeholder: "day/month/year"
     validations:
       required: false
   - type: textarea
