--- a/.github/ISSUE_TEMPLATE/task_list.yml
+++ b/.github/ISSUE_TEMPLATE/task_list.yml
@@ -1,5 +1,5 @@
 name: "☑️ Tracking of Tasks/Task List"
-description: Create a task list that tracks to-do's on the same topic. Helps split larger tasks into smaller to-do's. 
+description: Create a task list that tracks to-do's on the same topic. Helps split larger tasks into smaller to-do's. When the task list is created, you can convert your tasks to issues, by hovering over them with your mouse and clicking the issue symbol (circle) on the right. you can mark a task as complete, by clicking the checkbox that appears in front of the task. 
 title: "☑️ [Task List] - <title>"
 labels: [
   "tracking"
@@ -25,7 +25,7 @@ body:
     id: basic_example
     attributes:
       label: "To Do"
-      description: Add your tasks here, by writing "- [ ]" as shown below, and then replacing the placeholders ("Task 1", "Task 2") with the actual tasks that you need to complete. To mark a task as complete, simply click the checkbox that appear when the issue is created. 
+      description: Add your tasks here, by writing "- [ ]" as shown below, and then replacing the placeholders ("Task 1", "Task 2") with the actual tasks that you need to complete. 
       placeholder: |
         - [ ] Task 1
         - [ ] Task 2
