--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,10 +1,11 @@
+blank_issues_enabled: false
 contact_links:
-    - name: 🤔 Questions and Help
-      url: https://github.com/orgs/project-origin/categories/q-a
-      about: This issue tracker is not for support questions. Please refer to the community's Q&A and discussion forums.
-    - name: 🤝 Code of Conduct
-      url: https://github.com/project-origin/.github/blob/main/CODE_OF_CONDUCT.md
-      about: Please consult our Code of Conduct before participating in the Project-Origin community.
-    - name: 🛠️ Contribution Guidelines
-      url: https://github.com/project-origin/origin-collaboration/tree/main/docs/guidelines/contribution-guidelines
-      about: If this is your first contribution, make sure you are familiar with our Contribution Guidelines. 
+  - name: 🤔 Questions and Help
+    url: https://github.com/orgs/project-origin/categories/q-a
+    about: This issue tracker is not for support questions. Please refer to the community's Q&A and discussion forums.
+  - name: 🤝 Code of Conduct
+    url: https://github.com/project-origin/.github/blob/main/CODE_OF_CONDUCT.md
+    about: Please consult our Code of Conduct before participating in the Project-Origin community.
+  - name: 🛠️ Contribution Guidelines
+    url: https://github.com/project-origin/origin-collaboration/tree/main/docs/guidelines/contribution-guidelines
+    about: If this is your first contribution, make sure you are familiar with our Contribution Guidelines. 
