--- a/.github/workflows/reusable-build-container.yaml
+++ b/.github/workflows/reusable-build-container.yaml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Log in to the Container registry if token is set
         uses: docker/login-action@v2
-        if: ${{ github.event.secrets.pushtoken != '' }}
+        if: github.event.secrets.pushtoken != ''
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
