--- a/.github/workflows/reusable-build-container.yaml
+++ b/.github/workflows/reusable-build-container.yaml
@@ -35,6 +35,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       project: src/ProjectOrigin.WalletSystem.Server
+      push_token: ${{ secrets.pushtoken }}
 
     steps:
       - uses: actions/checkout@v3
@@ -47,7 +48,7 @@ jobs:
 
       - name: Log in to the Container registry if token is set
         uses: docker/login-action@v2
-        if: github.event.secrets.pushtoken != ''
+        if: ${{ env.push_token != '' }}
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -60,5 +61,5 @@ jobs:
           provenance: false
           context: ${{ inputs.context }}
           file: ${{ inputs.dockerfile }}
-          push: ${{ github.event.secrets.pushtoken != '' }}
+          push: ${{ env.push_token != '' }}
           tags: ${{ inputs.imagename }}:${{ inputs.version }}
