Add reusable workflows for publishing NuGet artifacts and running SonarCloud analysis

--- a/renovate-defaults.json
+++ b/renovate-defaults.json
@@ -30,5 +30,17 @@
                 "**/Dockerfile"
             ]
         }
+    ],
+    "customManagers": [
+        {
+            "customType": "regex",
+            "datasourceTemplate": "docker",
+            "fileMatch": [
+                "devcontainer.json$"
+            ],
+            "matchStrings": [
+                "\"image\": \"(?<depName>.+):(?<currentValue>.+)\""
+            ]
+        }
     ]
 }
