Update scheduled-renovate.yaml cron schedule

--- a/.github/workflows/scheduled-renovate.yaml
+++ b/.github/workflows/scheduled-renovate.yaml
@@ -2,8 +2,8 @@ name: Runs Renovate on a schedule
 
 on:
   schedule:
-    # Run at 9am-3pm on weekdays
-    - cron: 0 9-15 * * 1-5
+    # Run at 8am-2pm UTC on weekdays
+    - cron: 0 8-14 * * 1-5
 
 jobs:
   renovate:
