Update regex pattern to match image names with whitespace in renovate-defaults.json

--- a/renovate-defaults.json
+++ b/renovate-defaults.json
@@ -49,7 +49,7 @@
                 "devcontainer.json$"
             ],
             "matchStrings": [
-                "\"image\": \"(?<depName>.+):(?<currentValue>.+)\""
+                "\"image\":\\W*\"(?<depName>\\S+):(?<currentValue>\\S+)\""
             ]
         }
     ]
