--- a/.github/workflows/reusable-publish-nuget-artifacts.yaml
+++ b/.github/workflows/reusable-publish-nuget-artifacts.yaml
@@ -2,6 +2,11 @@ name: Publish nupkg artifacts to NuGet
 
 on:
   workflow_call:
+    inputs:
+      nuget_artifact:
+        description: 'Name of the artifact containing the nupkg files'
+        required: true
+        type: string
     secrets:
       nuget_api_key:
         required: true
@@ -16,6 +21,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427 # v4
         with:
+          name: ${{ inputs.nuget_artifact }}
           path: ${{ env.nuget_path }}
 
       - name: Publish
