--- a/.github/workflows/reusable-sonarcloud.yaml
+++ b/.github/workflows/reusable-sonarcloud.yaml
@@ -45,6 +45,6 @@ jobs:
         shell: bash
         run: |
           dotnet sonarscanner begin -k:"${{ vars.SONAR_PROJECTKEY }}" -o:"${{ vars.SONAR_ORGANIZATION }}" -d:sonar.token="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
-          dotnet build --no-incremental --no-restore src
+          dotnet build --no-incremental --no-restore
           dotnet-coverage collect 'make sonarcloud-test' -f xml -o "coverage.xml"
           dotnet sonarscanner end -d:sonar.token="${{ secrets.SONAR_TOKEN }}"
