--- a/.github/workflows/reusable-publish-chart.yaml
+++ b/.github/workflows/reusable-publish-chart.yaml
@@ -15,6 +15,10 @@ on:
         description: 'the repository of the helm registry'
         required: true
         type: string
+      prerelease:
+        description: 'The pre-release flag'
+        required: false
+        type: boolean
     secrets:
       helm_registry_token:
         required: true
@@ -42,6 +46,11 @@ jobs:
         id: variables
         run: |
           echo "name=$(yq .name < this/${{ inputs.chart_folder }}/Chart.yaml)" >> $GITHUB_OUTPUT
+
+      - name: Set annotation if pre-release
+        if: ${{ inputs.prerelease }}
+        run: |
+          yq eval '.metadata.annotations += {"artifacthub.io/prerelease": "true"}' this/${{ inputs.chart_folder }}/Chart.yaml
 
       - name: Package and generate index
         run: |
