Change default output format from PNG to SVG

--- a/.github/workflows/reusable-create-diagram.yaml
+++ b/.github/workflows/reusable-create-diagram.yaml
@@ -9,7 +9,7 @@ on:
       output: 
         type: string
         required: false
-        default: "artifacts/architecture.png"
+        default: "artifacts/architecture.svg"
       format: 
         type: string
         required: false
